welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var listeA=1
  var liste[Int](num)
  indice=1
  while(liste(num)==0){
    listeA=ndice
    for (i<-0 to indice-1){
      liste(i+indice-1)=listeA
    }  
  }
  return liste(num)
}